# dotfiles

./: .editorconfig  .env.dist  .gitignore  .gitmodules  .justfile  .versions  CLAUDE.md  README.md  install-all  install-asdf  install-claude  install-common  install-darwin  install-darwin-arm64  install-go  install-homebrew  install-js  install-k8s  install-launchd  install-linux  install-linux-aarch64  install-linux-x86_64  install-paths  install-python  install-rippling  install-rust  install-rust-dotfiles  install-systemd  install.ps1
.claude/: settings.local.json
atuin/: config.toml
bacon/: prefs.toml
bat/: config
broot/: conf.hjson
btm/: bottom.toml
btop/: btop.conf
cargo/: config.toml
claude/: claude_desktop_config.json
direnv/: direnv.toml
dlv/: config.yml  dlv
ghostty/: config
git/: .gitconfig  .gitignore_global  tigrc
glow/: glow.yml
goland/: apply-vmoptions  apply-vmoptions.bats  vmoptions.conf
hammerspoon/: init.lua
herdr/: config.toml
htop/: htop.rc
icons/: sniffnet.icns
idea/: .ideavimrc
k9s/: .gitignore  config.yaml
kitty/: current-theme.conf  kitty.conf  launch-actions.conf  open-actions.conf  theme-override.conf
launchd/: com.fightcpu.awd.plist
lazygit/: config.yml
lsd/: config.yaml  icons.yaml
mise/: config.toml
mutagen/: .mutagen.yml
nushell/: config.nu  env.nu
nvim/: .luarc.json  init.lua  lazy-lock.json  snapshot.vim
obsidian/: .obsidian.vimrc
openin/: slack.js
runcom/: p10k.zsh  (+3 more)
rust/branches/: Cargo.toml  loop.sh
rust/branches/src/: app.rs  errors.rs  git.rs  lib.rs  prelude.rs  tui.rs
(+323 files in other folders)
