[package]
name = "branches"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
color-eyre.workspace = true
git2.workspace = true
git-url-parse.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = "0.4.38"

[[bin]]
name = "branches"
path = "src/bin/main.rs"

